--- a/config.json
+++ b/config.json
@@ -1,4 +1,9 @@
-{
-    "prefix": "!"
-  }
-  
+require('dotenv').config();
+
+module.exports = {
+  token: process.env.BOT_TOKEN,
+  clientId: process.env.CLIENT_ID,
+  guildId: process.env.GUILD_ID,
+  defaultLanguage: "id",
+  djRole: "DJ"
+};
